# yet_another

./: .gitignore  CHANGES.md  README.md  config.json  docker-compose-development-cached.yml  docker-compose-development.yml  docker-compose.yml  example.env  manage.py  pyproject.toml  simple_wsgi.py  tests.md
app/: admin.py  apps.py  mixins.py  models.py  search_index.py  tasks.py  urls.py  views.py
app/forms/: auth_forms.py  content_forms.py  settings_forms.py
app/management/commands/: build_index.py  (+3 more)
app/migrations/: 0001_initial.py  0002_question_answer_count_question_rating_and_more.py  0003_rename_rating_question_rating_cache.py  0004_rename_answer_count_question_answer_count_cache.py  0005_answer_rating_cache_alter_answer_question.py
app/models/: __init__.py  likes_models.py  profile_models.py  question_models.py
app/signals/: answer_signals.py  question_signals.py
app/views/: __init__.py  api_views.py  auth_views.py  base_views.py  question_views.py  settings_views.py
blazing/: asgi.py  settings.py  urls.py  wsgi.py
nginx/: nginx-cached.conf  nginx.conf
static/css/: main.css  terminal.css  terminal_teal.css
static/js/: api.js  centrifugo.js  config.js  main.js
templates/: 404.html  ask.html  by_tag.html  home.html  hot.html  login.html  register.html  search.html  settings.html
templates/answers/: card.html
templates/generic/: base.html  form_errors_list.html  header.html  main.html  paginator.html  rating_buttons.html
templates/questions/: card.html  list.html  single.html
yet_another/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
(+3 files in other folders)
