[project]
name = "yet-another"
version = "0.1.0"
description = "Yet another Q&A service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.7",
    "faker>=37.12.0",
    "gunicorn>=23.0.0",
    "marshmallow>=4.1.1",
    "pillow>=12.0.0",
    "psycopg2>=2.9.11",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.1.0",
    "ruff>=0.14.4",
]
