[project]
name = "yet-another"
version = "0.1.0"
description = "Yet another Q&A service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.0",
    "django>=5.2.7",
    "django-environ>=0.12.0",
    "django-redis>=6.0.0",
    "faker>=37.12.0",
    "gunicorn>=23.0.0",
    "marshmallow>=4.1.1",
    "pillow>=12.0.0",
    "psycopg>=3.3.2",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.1.0",
    "ruff>=0.14.4",
]
